--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
     <link rel="stylesheet"
           href="./styles/styles.css">
-    <title>Document</title>
+    <title>Rispondi e Vinci!</title>
 </head>
 
 <body>
+      <div id="app"></div>
     <script type="module"
             src="./js/main.js"></script>
 </body>
